Clamp dialog bounds to be fully visible on the nearest display

If a displayed modal dialog is partially or entirely off-screen, the
user may be unable to interact with it or even be aware of its
presence. This change ensures that the dialog is moved to the
nearest display so that it is fully visible to the user.

BUG=668734

Review-Url: https://codereview.chromium.org/2549543002
Cr-Commit-Position: refs/heads/master@{#439127}

Former-commit-id: 51116b9a03e97df9962af7b22e0f3661dbd6efb3